(exprmt) fix implicit side-bar menu overflow

--- a/custom-exp.css
+++ b/custom-exp.css
@@ -888,11 +888,6 @@ html ::-webkit-scrollbar {
   #app-container {
     flex-direction: row-reverse;
   }
-
-  .cp__right-sidebar.open {
-    width: 300px !important;
-  }
-
   #head:last-child {
     order: 1;
   }
@@ -906,6 +901,10 @@ html ::-webkit-scrollbar {
     order: 2;
   }
 
+  .cp__right-sidebar.open {
+    width: 280px !important;
+  }
+
   .cp__right-sidebar-topbar {
     flex-direction: row-reverse;
   }
@@ -916,6 +915,7 @@ html ::-webkit-scrollbar {
 
   .cp__right-sidebar-settings {
     padding-right: 20px;
+    width: 260px;
   }
 
   .cp__right-sidebar-inner .resizer {
